--- a/apps/academico/templates/modulo/detalle.html
+++ b/apps/academico/templates/modulo/detalle.html
@@ -5,7 +5,7 @@
     <ul class="nav nav-pills">
         <li class="active"><a href="{% url 'home' %}">Inicio</a></li>
         <li><a href="{% url 'agregarAsignatura' %}">Asignatura</a></li>
-        <li><a href="{% url 'agregarAsignatura' %}">Alumnos</a></li>
+        <li><a href="{% url 'agregarAlumno' %}">Alumnos</a></li>
         <li><a href="{% url 'agregarCarrera' %}">Carreras profesionales</a></li>
         <li><a href="{% url 'agregarModulo' %}">Modulo</a></li>
         <li><a href="{% url 'agregarDocente' %}">Docente</a></li>
