--- a/apps/academico/templates/alumno/eliminar.html
+++ b/apps/academico/templates/alumno/eliminar.html
@@ -4,12 +4,12 @@
 <head>
     <ul class="nav nav-pills">
         <li class="active"><a href="{% url 'home' %}">Inicio</a></li>
-        <li><a href="{% url 'agregarAsignatura' %}">Asignatura</a></li>
-        <li><a href="{% url 'agregarAlumnos' %}">Alumnos</a></li>
-        <li><a href="{% url 'agregarCarrera' %}">Carreras profesionales</a></li>
-        <li><a href="{% url 'agregarModulo' %}">Modulo</a></li>
-        <li><a href="{% url 'agregarDocente' %}">Docente</a></li>
-        <li><a href="agregarModulo">Aulas</a></li>
+        <li><a href="{% url 'listarAsignatura' %}">Asignatura</a></li>
+        <li><a href="{% url 'listarAlumno' %}">Alumnos</a></li>
+        <li><a href="{% url 'listarCarrera' %}">Carreras profesionales</a></li>
+        <li><a href="{% url 'listarModulo' %}">Modulo</a></li>
+        <li><a href="{% url 'listarDocente' %}">Docente</a></li>
+        <li><a href="{% url 'listarModulo' %}">Aulas</a></li>
     </ul>
     <meta charset="UTF-8">
     <title>eliminar Alumnos</title>
@@ -42,7 +42,7 @@
             
             <div class="col-md-12">
 
-                <form role="form" action="{% url 'eliminar' alumno.pk %}" method="POST">{% csrf_token %}
+                <form role="form" action="{% url 'eliminarAlumno' alumno.pk %}" method="POST">{% csrf_token %}
                     <p class="">¿Desea eliminar el alumno "nombre evento"?</p>
 
                     <input type="submit" value="Sí" class="btn btn-danger"> 
