--- a/apps/academico/templates/asignatura/index.html
+++ b/apps/academico/templates/asignatura/index.html
@@ -4,12 +4,12 @@
 <head>
     <ul class="nav nav-pills">
         <li class="active"><a href="{% url 'home' %}">Inicio</a></li>
-        <li><a href="{% url 'agregarAsignatura' %}">Asignatura</a></li>
-        <li><a href="{% url 'agregarAlumnos' %}">Alumnos</a></li>
-        <li><a href="{% url 'agregarCarrera' %}">Carreras profesionales</a></li>
-        <li><a href="{% url 'agregarModulo' %}">Modulo</a></li>
-        <li><a href="{% url 'agregarDocente' %}">Docente</a></li>
-        <li><a href="agregarModulo">Aulas</a></li>
+        <li><a href="{% url 'listarAsignatura' %}">Asignatura</a></li>
+        <li><a href="{% url 'listarAlumno' %}">Alumnos</a></li>
+        <li><a href="{% url 'listarCarrera' %}">Carreras profesionales</a></li>
+        <li><a href="{% url 'listarModulo' %}">Modulo</a></li>
+        <li><a href="{% url 'listarDocente' %}">Docente</a></li>
+        <li><a href="{% url 'listarModulo' %}">Aulas</a></li>
     </ul>
     <meta charset="UTF-8">
     <title>Asignaturas</title>
@@ -66,7 +66,9 @@
                             <td>{{ asignatura.modulo }}</td>
                             <td>{{ asignatura.creditos }}</td>
                             <td class="text-right">
-                                <a href="{% url 'asignaturas' %}" class="btn btn-success"><span class="glyphicon glyphicon-eye-open"></span></a>
+                                <a href="{% url 'detalleAsignatura' asignatura.pk %}" class="btn btn-success"><span class="glyphicon glyphicon-eye-open"></span></a>
+                                <a href="{% url 'modificarAsignatura' asignatura.pk %}" class="btn btn-warning"><span class="glyphicon glyphicon-pencil"></span></a>
+                                <a href="{% url 'eliminarAsignatura' asignatura.pk %}" class="btn btn-danger"><span class="glyphicon glyphicon-trash"></span></a>
                             </td>
                         </tr>
                     {% endfor %}
