--- a/apps/academico/templates/docente/eliminar.html
+++ b/apps/academico/templates/docente/eliminar.html
@@ -4,12 +4,12 @@
 <head>
     <ul class="nav nav-pills">
         <li class="active"><a href="{% url 'home' %}">Inicio</a></li>
-        <li><a href="{% url 'agregarAsignatura' %}">Asignatura</a></li>
-        <li><a href="{% url 'aagregarAlumnos' %}">Alumnos</a></li>
-        <li><a href="{% url 'agregarCarrera' %}">Carreras profesionales</a></li>
-        <li><a href="{% url 'agregarModulo' %}">Modulo</a></li>
-        <li><a href="{% url 'agregarDocente' %}">Docente</a></li>
-        <li><a href="agregarModulo">Aulas</a></li>
+        <li><a href="{% url 'listarAsignatura' %}">Asignatura</a></li>
+        <li><a href="{% url 'listarAlumno' %}">Alumnos</a></li>
+        <li><a href="{% url 'listarCarrera' %}">Carreras profesionales</a></li>
+        <li><a href="{% url 'listarModulo' %}">Modulo</a></li>
+        <li><a href="{% url 'listarDocente' %}">Docente</a></li>
+        <li><a href="{% url 'listarModulo' %}">Aulas</a></li>
     </ul>
     <meta charset="UTF-8">
     <title>Eliminar Docentes</title>
@@ -25,7 +25,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">CRUD de Docentes</a>
+                <a class="navbar-brand" href="{% url 'listarDocente' %}">CRUD de Docentes</a>
             </div>            
         </div>
     </div>
@@ -46,7 +46,7 @@
                     <p class="">¿Desea eliminar el alumno "nombre evento"?</p>
 
                     <input type="submit" value="Sí" class="btn btn-danger"> 
-                    <a href="{% url 'home' %}" class="btn btn-default">No</a>
+                    <a href="{% url 'listarDocente' %}" class="btn btn-default">No</a>
                 </form>
 
             </div><!-- col-md-12 -->
