--- a/apps/academico/templates/docente/index.html
+++ b/apps/academico/templates/docente/index.html
@@ -4,12 +4,12 @@
 <head>
     <ul class="nav nav-pills">
         <li class="active"><a href="{% url 'home' %}">Inicio</a></li>
-        <li><a href="{% url 'agregarAsignatura' %}">Asignatura</a></li>
-        <li><a href="{% url 'agregarAlumnos' %}">Alumnos</a></li>
-        <li><a href="{% url 'agregarCarrera' %}">Carreras profesionales</a></li>
-        <li><a href="{% url 'agregarModulo' %}">Modulo</a></li>
-        <li><a href="{% url 'agregarDocente' %}">Docente</a></li>
-        <li><a href="agregarModulo">Aulas</a></li>
+        <li><a href="{% url 'listarAsignatura' %}">Asignatura</a></li>
+        <li><a href="{% url 'listarAlumno' %}">Alumnos</a></li>
+        <li><a href="{% url 'listarCarrera' %}">Carreras profesionales</a></li>
+        <li><a href="{% url 'listarModulo' %}">Modulo</a></li>
+        <li><a href="{% url 'listarDocente' %}">Docente</a></li>
+        <li><a href="{% url 'listarModulo' %}">Aulas</a></li>
     </ul>
     <meta charset="UTF-8">
     <title>Document</title>
@@ -25,7 +25,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{% url 'home' %}">CRUD de Alummnos</a>
+                <a class="navbar-brand" href="{% url 'home' %}">CRUD de Docentes</a>
             </div>            
         </div>
     </div>
@@ -36,8 +36,8 @@
                 <strong>
                     Hay <span class="label label-warning">{{ cantidad }}</span> lista de alumnos
                 </strong>
-                <a class="btn btn-primary pull-right" href="{% url 'agregarAlumno' %}">
-                    <span class="glyphicon glyphicon-plus"></span> Crear un alumno nuevo
+                <a class="btn btn-primary pull-right" href="{% url 'agregarDocente' %}">
+                    <span class="glyphicon glyphicon-plus"></span> Crear un Docente nuevo
                 </a>
             </h4>
         </div><!-- page-header -->
@@ -74,12 +74,14 @@
                             <td>{{ docente.especilidad }}</td>
                             <td>{{ docente.titulo }}</td>
                             <td>{{ docente.telefono }}</td>
-                            <td>{{ alumno.sexo }}</td>
-                            <td>{{ alumno.direccion }}</td>
-                            <td>{{ alumno.email }}</td>
-                            <td>{{ alumno.foto }}</td>
+                            <td>{{ docente.sexo }}</td>
+                            <td>{{ docente.direccion }}</td>
+                            <td>{{ docente.email }}</td>
+                            <td>{{ docente.foto }}</td>
                             <td class="text-right">
-                                <a href="{% url 'detalleAlumno' alumno.pk %}" class="btn btn-success"><span class="glyphicon glyphicon-eye-open"></span></a>
+                                <a href="{% url 'detalleDocente' docente.pk %}" class="btn btn-success"><span class="glyphicon glyphicon-eye-open"></span></a>
+                                <a href="{% url 'modificarDocente' docente.pk %}" class="btn btn-warning"><span class="glyphicon glyphicon-pencil"></span></a>
+                                <a href="{% url 'eliminarDocente' docente.pk %}" class="btn btn-danger"><span class="glyphicon glyphicon-trash"></span></a>
                             </td>
                         </tr>
                     {% endfor %}
