--- a/apps/academico/templates/modulo/eliminar.html
+++ b/apps/academico/templates/modulo/eliminar.html
@@ -4,15 +4,15 @@
 <head>
     <ul class="nav nav-pills">
         <li class="active"><a href="{% url 'home' %}">Inicio</a></li>
-        <li><a href="{% url 'agregarAsignatura' %}">Asignatura</a></li>
-        <li><a href="{% url 'agregarAlumno' %}">Alumnos</a></li>
-        <li><a href="{% url 'agregarCarrera' %}">Carreras profesionales</a></li>
-        <li><a href="{% url 'agregarModulo' %}">Modulo</a></li>
-        <li><a href="{% url 'agregarDocente' %}">Docente</a></li>
-        <li><a href="agregarModulo">Aulas</a></li>
+        <li><a href="{% url 'listarAsignatura' %}">Asignatura</a></li>
+        <li><a href="{% url 'listarAlumno' %}">Alumnos</a></li>
+        <li><a href="{% url 'listarCarrera' %}">Carreras profesionales</a></li>
+        <li><a href="{% url 'listarModulo' %}">Modulo</a></li>
+        <li><a href="{% url 'listarDocente' %}">Docente</a></li>
+        <li><a href="{% url 'listarModulo' %}">Aulas</a></li>
     </ul>
     <meta charset="UTF-8">
-    <title>eliminar Alumnos</title>
+    <title>eliminar Modulo</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 </head>
 <body>
@@ -25,7 +25,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">CRUD de Alummnos</a>
+                <a class="navbar-brand" href="#">CRUD de Modulo</a>
             </div>            
         </div>
     </div>
@@ -34,7 +34,7 @@
 
         <div class="page-header">
             <h4>
-                <strong>Eliminando: {{ alumno }}</strong>
+                <strong>Eliminando: {{ modulo }}</strong>
             </h4>
         </div><!-- page-header -->
 
@@ -42,11 +42,11 @@
             
             <div class="col-md-12">
 
-                <form role="form" action="{% url 'eliminar' alumno.pk %}" method="POST">{% csrf_token %}
+                <form role="form" action="{% url 'eliminar' modulo.pk %}" method="POST">{% csrf_token %}
                     <p class="">¿Desea eliminar el alumno "nombre evento"?</p>
 
                     <input type="submit" value="Sí" class="btn btn-danger"> 
-                    <a href="{% url 'home' %}" class="btn btn-default">No</a>
+                    <a href="{% url 'listarModulo' %}" class="btn btn-default">No</a>
                 </form>
 
             </div><!-- col-md-12 -->
