--- a/apps/academico/templates/alumno/index.html
+++ b/apps/academico/templates/alumno/index.html
@@ -72,7 +72,7 @@
                             <td>{{ alumno.sexo }}</td>
                             <td>{{ alumno.direccion }}</td>
                             <td>{{ alumno.email }}</td>
-                            <td>{{ alumno.foto }}</td>
+                            <td>{{ alumno.foto.url }}</td>
                             <td class="text-right">
                                 <a href="{% url 'detalleAlumno' alumno.pk %}" class="btn btn-success"><span class="glyphicon glyphicon-eye-open"></span></a>
                                 <a href="{% url 'modificarAlumno' alumno.pk %}" class="btn btn-warning"><span class="glyphicon glyphicon-pencil"></span></a>
