--- a/apps/academico/templates/asistencia/index.html
+++ b/apps/academico/templates/asistencia/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 </head>
 <body>
-    <div class="alert alert-success" role="alert">EN CONSTRUCCION</div>
+    <div class="alert alert-info" role="alert">EN CONSTRUCCION</div>
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="{% static 'js/bootstrap.js' %}"></script>
 </body>
