--- a/apps/academico/templates/matricula/index.html
+++ b/apps/academico/templates/matricula/index.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 </head>
 <body>
+
+    <form role="form" method="POST">{% csrf_token %}
+                    <p class="lead"><span class="glyphicon glyphicon-info-sign"></span> Ingresa dni.</p>
+                    
+                    
+                    <div class="form-group">
+                        <label>{{ form.dni.label_tag }}</label>
+                        {{ form.dni }}
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-primary">ingresar</button>
+                    </div>
+                </form>
     <div class="alert alert-success" role="alert">EN CONSTRUCCION</div>
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="{% static 'js/bootstrap.js' %}"></script>
