--- a/apps/matricula/templates/matricula/index.html
+++ b/apps/matricula/templates/matricula/index.html
@@ -2,7 +2,7 @@
     {% if not user.is_authenticated %}
         <a href="{% url 'users_app:login' %}">Iniciar Sesión</a>
     {% else %}
-        <h1>bienvenido {{ user.username }}</h1>
+        <h1>bienvenido {{ user.get_full_name }}</h1>
         <a href="{% url 'users_app:logout' %}">Salir</a>
     {% endif %}
 {% endblock content %}
