--- a/apps/users/templates/users/base_users.html
+++ b/apps/users/templates/users/base_users.html
@@ -4,7 +4,7 @@
 
 {% block css %}
     <link rel="stylesheet" href="{% static 'css/materialize.css' %}">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/estilologin.css' %}">
 {% endblock css %}
 
 {% block js %}
