--- a/apps/users/templates/users/login.html
+++ b/apps/users/templates/users/login.html
@@ -15,7 +15,7 @@
 
                     <div class="row">
                         <div class="input-field col s12 center">
-                            <img src="{% static 'img/luigui.gif' %}" alt="no se puedo cargar la imagen" class="circle responsive-img">
+                            <img src="{% static 'img/logo_nue.png' %}" alt="no se puedo cargar la imagen" class="circle responsive-img">
                             <p class="center">
                                 Introdusca Usuario y Contraseña
                             </p>
