--- a/apps/matricula/templates/matricula/index.html
+++ b/apps/matricula/templates/matricula/index.html
@@ -3,6 +3,7 @@
         <a href="{% url 'users_app:login' %}">Iniciar Sesión</a>
     {% else %}
         <h1>bienvenido {{ user.get_full_name }}</h1>
+        <img src="{{ user.avatar.url }}" alt="no hay imagen">
         <a href="{% url 'users_app:logout' %}">Salir</a>
     {% endif %}
 {% endblock content %}
