--- a/apps/users/templates/base.html
+++ b/apps/users/templates/base.html
@@ -7,9 +7,9 @@
     {% block css %}{% endblock css %}
 </head>
 <body>
+    {% block sidenav %}{% endblock sidenav %}
 
-    {% block content %}        
-    {% endblock content %}
+    {% block content %}{% endblock content %}
 
     {% block js %}{% endblock js %}
 </body>
