--- a/apps/users/templates/users/base_users.html
+++ b/apps/users/templates/users/base_users.html
@@ -5,6 +5,8 @@
 {% block css %}
     <link rel="stylesheet" href="{% static 'css/materialize.css' %}">
     <link rel="stylesheet" href="{% static 'css/estilologin.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link href='http://fonts.googleapis.com/css?family=Ubuntu:400,700' rel='stylesheet' type='text/css'>
 {% endblock css %}
 
 {% block js %}
