--- a/apps/matricula/templates/matricula/index.html
+++ b/apps/matricula/templates/matricula/index.html
@@ -1,9 +1,59 @@
-{% block content %}
-    {% if not user.is_authenticated %}
-        <a href="{% url 'users_app:login' %}">Iniciar Sesión</a>
-    {% else %}
-        <h1>bienvenido {{ user.get_full_name }}</h1>
-        <img src="{{ user.avatar.url }}" alt="no hay imagen">
-        <a href="{% url 'users_app:logout' %}">Salir</a>
-    {% endif %}
-{% endblock content %}
+{% load staticfiles %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Matricula</title>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <div class="list-group">
+        <a href="#" class="list-group-item active">
+        Procesos
+        </a>
+        <a href="http://127.0.0.1:8000/home_carrera" class="list-group-item">Carreras Profesionales</a>
+        <a href="http://127.0.0.1:8000/pre_matricula" class="list-group-item">Pre Matricula</a>
+        <a href="http://127.0.0.1:8000/verificar_alumno" class="list-group-item">Matricula</a>
+        <a href="http://127.0.0.1:8000/home_alumno" class="list-group-item">Mantenimiento Alumno</a>
+    </div>
+</head>
+<body>
+    <div class="navbar navbar-default" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">LISTA DE ALUMNOS MATRICULADOS</a>
+            </div>            
+        </div>
+    </div>
+    <div class="row">
+            <div class="col-md-12">
+                <table class="table table-striped table-hover">
+                <thead>
+                    <tr>
+                        <th>Alumno</th>
+                        <th>Modulo</th>
+                        <th>Fecha</th>
+                        <th>Periodo</th>
+                        <th>Estado</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for matricula in matriculas %}
+                        <tr>                        
+                            <td>{{ matricula.alumno }}</td>
+                            <td>{{ matricula.modulo }}</td>
+                            <td>{{ matricula.fecha_matricula }}</td>
+                            <td>{{ matricula.periodo }}</td>
+                            <td>{{ matricula.estado_matricula }}</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div><!-- col-md-12 -->
+        </div>
+</body>
+</html>
