se creo el modelo asitencia alumno

--- a/apps/users/templates/users/panel/base_panel.html
+++ b/apps/users/templates/users/panel/base_panel.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="{% static 'css/materialize.css' %}">
     <link rel="stylesheet" href="{% static 'css/stylepanel.css' %}">
     <link href='http://fonts.googleapis.com/css?family=Ubuntu:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 {% endblock css %}
 
 {% block sidenav %}
