--- a/apps/users/templates/users/panel/panel.html
+++ b/apps/users/templates/users/panel/panel.html
@@ -10,13 +10,11 @@
             <li class="bold"><a class="collapsible-header  waves-effect waves-teal">Mantenimientos</a>
                 <div class="collapsible-body">
                     <ul>
-                        <li><a href="#">Docentes</a></li>
+                        <li><a href="{% url 'users_app:panel_docente' %}">Docentes</a></li>
                         <li><a href="#">Admistrativos</a></li>
                         <li><a href="#">Asignatura</a></li>
                         <li><a href="#">Carreras Profesionales</a></li>
                         <li><a href="#">Modulos</a></li>
-                        <li><a href="#">Aulas</a></li>
-                        <li><a href="#">Horarios</a></li>
                     </ul>
                 </div>
             </li>
