--- a/apps/users/templates/users/docente/panel/docente_panel.html
+++ b/apps/users/templates/users/docente/panel/docente_panel.html
@@ -1,18 +1,18 @@
 {% extends "users/panel/panel.html" %}
 
 {% block contenido_panel %}
-    <div class="container container-panel">
+    <div class="container panel-container">
       <div class="row">
-        <div class="col s8">
-          <h6>Hay <span class="count-panel">5</span> docentes disponibles</h6>
+        <div class="col s6 m8">
+          <h6>Hay <span class="panel-count">5</span> docentes disponibles</h6>
         </div>
-        <div class="col s4">
-          <a class="waves-effect waves-light btn" href="#"><i class="fa fa-plus left"></i>agregar docente</a>
+        <div class="col s6 m4">
+          <a class="waves-effect waves-light btn" href="{% url 'users_app:agregar_docente' %}"><i class="fa fa-plus left"></i>agregar docente</a>
         </div>
       </div>
       <div class="divider"></div>
       <div class="row">
-        <table class="bordered hoverable">
+        <table class="hoverable centered bordered responsive-table">
         <thead>
           <tr>
               <th>Nombres</th>
@@ -22,7 +22,7 @@
               <th>Email</th>              
               <th>Tipo de docente</th>              
               <th>Especialidad</th>              
-              <th colspam="2">Acciones</th>              
+              <th>Acciones</th>              
           </tr>
         </thead>
         <tbody>
@@ -35,9 +35,65 @@
             <td>$0.87</td>
             <td>$0.87</td>
             <td>
-              <a href="#" class="btn green"><i class="fa fa-eye"></i></a>
-              <a href="#" class="btn yellow"><i class="fa fa-edit"></i></a>
-              <a href="#" class="btn red"><i class="fa fa-trash-o"></i></a>
+              <a href="#" class="waves-effect waves-light btn panel-btn green"><i class="fa fa-eye"></i></a>
+              <a href="#" class="waves-effect waves-light btn panel-btn yellow"><i class="fa fa-edit"></i></a>
+              <a href="#" class="waves-effect waves-light btn panel-btn red"><i class="fa fa-trash-o"></i></a>
+            </td>
+          </tr>
+          <tr>
+            <td>Alvin</td>
+            <td>Eclair</td>
+            <td>$0.87</td>
+            <td>$0.87</td>
+            <td>$0.87</td>
+            <td>$0.87</td>
+            <td>$0.87</td>
+            <td>
+              <a href="#" class="waves-effect waves-light btn panel-btn green"><i class="fa fa-eye"></i></a>
+              <a href="#" class="waves-effect waves-light btn panel-btn yellow"><i class="fa fa-edit"></i></a>
+              <a href="#" class="waves-effect waves-light btn panel-btn red"><i class="fa fa-trash-o"></i></a>
+            </td>
+          </tr>
+          <tr>
+            <td>Alvin</td>
+            <td>Eclair</td>
+            <td>$0.87</td>
+            <td>$0.87</td>
+            <td>$0.87</td>
+            <td>$0.87</td>
+            <td>$0.87</td>
+            <td>
+              <a href="#" class="waves-effect waves-light btn panel-btn green"><i class="fa fa-eye"></i></a>
+              <a href="#" class="waves-effect waves-light btn panel-btn yellow"><i class="fa fa-edit"></i></a>
+              <a href="#" class="waves-effect waves-light btn panel-btn red"><i class="fa fa-trash-o"></i></a>
+            </td>
+          </tr>
+          <tr>
+            <td>Alvin</td>
+            <td>Eclair</td>
+            <td>$0.87</td>
+            <td>$0.87</td>
+            <td>$0.87</td>
+            <td>$0.87</td>
+            <td>$0.87</td>
+            <td>
+              <a href="#" class="waves-effect waves-light btn panel-btn green"><i class="fa fa-eye"></i></a>
+              <a href="#" class="waves-effect waves-light btn panel-btn yellow"><i class="fa fa-edit"></i></a>
+              <a href="#" class="waves-effect waves-light btn panel-btn red"><i class="fa fa-trash-o"></i></a>
+            </td>
+          </tr>
+          <tr>
+            <td>Alvin</td>
+            <td>Eclair</td>
+            <td>$0.87</td>
+            <td>$0.87</td>
+            <td>$0.87</td>
+            <td>$0.87</td>
+            <td>$0.87</td>
+            <td>
+              <a href="#" class="waves-effect waves-light btn panel-btn green"><i class="fa fa-eye"></i></a>
+              <a href="#" class="waves-effect waves-light btn panel-btn yellow"><i class="fa fa-edit"></i></a>
+              <a href="#" class="waves-effect waves-light btn panel-btn red"><i class="fa fa-trash-o"></i></a>
             </td>
           </tr>
         </tbody>
