--- a/apps/users/templates/users/panel/panel.html
+++ b/apps/users/templates/users/panel/panel.html
@@ -15,6 +15,8 @@
                         <li><a href="#">Asignatura</a></li>
                         <li><a href="#">Carreras Profesionales</a></li>
                         <li><a href="#">Modulos</a></li>
+                        <li><a href="{% url 'asistencia_app:panel_horario' %}">Horarios</a></li>
+                        <li><a href="{% url 'asistencia_app:panel_aula' %}">Aulas</a></li>
                     </ul>
                 </div>
             </li>
