--- a/apps/asistencia/templates/aula/agregar_aula.html
+++ b/apps/asistencia/templates/aula/agregar_aula.html
@@ -1,96 +1,71 @@
 {% extends "users/panel/panel.html" %}
 
 {% block contenido_panel %}
-    <div class="container container-panel">
+    <div class="container panel-container">
         <div class="row">
-            <div class="col s12">
-                <a class="waves-effect waves-light btn" href="#"><i class="fa fa-chevron-left left"></i>Regresar</a>    
+            <div class="col s5">
+                <a class="waves-effect waves-light btn btn-back" href="{% url 'asistencia_app:panel_aula' %}"><i class="fa fa-chevron-left left"></i>Regresar</a>    
             </div>
-
-        <div class="divider"></div>
-      
-        <div class="row">
-            <div class="col s12 m12 l12">
-              <div class="card-panel">
-                <h6 class="header2">Crear nuevo docente</h6>
-                <div class="row">
-                  <form class="col s12">
-                    <div class="row">
-                      <div class="input-field col s6">
-                        <input id="first_name" type="text">
-                        <label for="first_name">First Name</label>
-                      </div>
-                    
-                      <div class="input-field col s6">
-                        <input id="last_name" type="text">
-                        <label for="last_name">Last Name</label>
-                      </div>
-                    </div>
-
-                    <div class="row">
-                      <div class="input-field col s12">
-                        <input id="email5" type="email">
-                        <label for="email">Email</label>
-                      </div>
-                    </div>
-
-                    <div class="row">
-                      <div class="input-field col s12">
-                        <input id="password6" type="password">
-                        <label for="password">Password</label>
-                      </div>
-                    </div>
-
-                    <div class="row">
-                      <div class="input-field col s6">
-                        <select>
-                          <option value="" disabled selected>Choose your profile</option>
-                          <option value="1">Manager</option>
-                          <option value="2">Developer</option>
-                          <option value="3">Business</option>
-                        </select>
-                        <label>Select Profile</label>
-                      </div>                        
-                      <div class="input-field col s6">
-                        <input type="date" class="datepicker">
-                        <label for="dob">DOB</label>
-                      </div>                      
-                    </div>
-                    
-                    <div class="row">
-                      <div class="file-field input-field col s6">
-                        <input class="file-path validate" type="text"/>
-                        <div class="btn">
-                          <span>Age</span>
-                          <input type="file" />
-                        </div>
-                      </div>
-                      <div class="input-field col s6">                          
-                         <span>Image</span>
-                         <p class="range-field">
-                          <input type="range" id="test5" min="0" max="100" />
-                        </p>
-                      </div>
-                    </div>
-
-                    <div class="row">
-                      <div class="input-field col s12">
-                        <textarea id="message5" class="materialize-textarea" length="120"></textarea>
-                        <label for="message">Message</label>
-                      </div>
-                      <div class="row">
-                        <div class="input-field col s12">
-                          <button class="btn cyan waves-effect waves-light right" type="submit" name="action">Submit
-                            <i class="mdi-content-send right"></i>
-                          </button>
-                        </div>
-                      </div>
-                    </div>
-
-                  </form>
-                </div>
-              </div>
+            <div class="col s7">
+                <h5>Crear una nueva aula</h5>    
             </div>
         </div>
-    </div>
+
+
+        <div class="divider"></div>
+        {% if form.errors %}
+            <div class="card-panel red lighten-1">
+                <span class="white-text"> {{ form.errors }} </span>
+            </div>
+            <div class="divider"></div>
+        {% endif %}
+        <div class="row">
+            <div class="col s12 m6 l6">
+                <div class="card-panel">
+                    <div class="row">
+                        <form class="col s12" method="POST">{% csrf_token %}
+
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    {{ form.nro_aula }}
+                                    {{ form.nro_aula.label_tag }}
+                                </div>
+                            </div>
+                            
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    {{ form.piso }}
+                                    {{ form.piso.label_tag }}
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    {{ form.tipo_aula }}
+                                    {{ form.tipo_aula.label_tag }}
+                                </div>
+                            </div>
+                            
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    {{ form.capacidad }}
+                                    {{ form.capacidad.label_tag }}
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="input-field col s12">
+                                      <button class="btn cyan waves-effect waves-light right" type="submit" name="action">guardar
+                                        <i class="mdi-content-send right"></i>
+                                      </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div><!-- fin de card-panel -->
+
+            </div>
+        </div><!-- fin de row -->
+        
+    </div><!-- fin de panel-container -->
 {% endblock contenido_panel %}
