--- a/apps/asistencia/templates/aula/detalle_aula.html
+++ b/apps/asistencia/templates/aula/detalle_aula.html
@@ -1,9 +1,48 @@
 {% extends "users/panel/panel.html" %}
 
 {% block contenido_panel %}
-    <div class="container container-panel">
-      <div class="row">
+    <div class="container panel-container">
+        <div class="row">
+            <div class="col s5">
+                <a class="waves-effect waves-light btn btn-back" href="{% url 'asistencia_app:panel_aula' %}"><i class="fa fa-chevron-left left"></i>Regresar</a>    
+            </div>
+            <div class="col s7">
+                <h5>Aula: {{ aula }} detalle</h5>    
+            </div>
+        </div>
+
+        <div class="divider"></div>
         
-      </div>
-    </div>
+        <div class="row">
+            <div class="col s12 m6 l6">
+                <div class="card-panel">
+                    <div class="row">
+                        <ul class="collection">
+                            <li class="collection-item">
+                                <span class="title">Numero de aula:</span>
+                                <p>{{ aula.nro_aula }}</p>
+                            </li>
+                            <li class="collection-item">
+                                <span class="title">Piso:</span>
+                                <p>{{ aula.piso }}</p>
+                            </li>
+                            <li class="collection-item">
+                                <span class="title">tipo de aula:</span>
+                                <p>{{ aula.get_tipo_aula_display }}</p>
+                            </li>
+                            <li class="collection-item">
+                                <span class="title">capacidad:</span>
+                                <p>{{ aula.capacidad }}</p>
+                            </li>
+
+                        </ul> <!-- fin de collection -->
+                    </div>
+
+                </div><!-- fin de card-panel -->
+
+            </div>
+        </div><!-- fin de row -->
+        
+    </div><!-- fin de panel-container -->
+
 {% endblock contenido_panel %}
