--- a/apps/users/static/css/stylepanel.css
+++ b/apps/users/static/css/stylepanel.css
@@ -100,6 +100,28 @@ i.right-profile{
   height: 57px;
   margin-bottom: 32px; }
 
+.panel-container {
+  margin-top: 2rem; 
+}
+
+.panel-count {
+  border: 1px solid #eee;
+  background: #00b0ff;
+  padding: 0.1rem .7rem;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  border-radius: 7px;
+  color: white;
+}
+
+.panel-btn{
+  padding: 0 0.7rem;
+}
+
+.btn-back{
+  margin-top: 0.55rem;
+}
+
 nav.top-nav {
   height: 122px;
   box-shadow: none; }
