diseño del index

--- a/apps/matricula/static/css/estilos.css
+++ b/apps/matricula/static/css/estilos.css
@@ -1,387 +1,3 @@
-a
-{
-    text-decoration: none;
-}
-body
-{
-    background: #F5EFD9;
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 16px;
-}
-
-button
-{
-    background: #741112;
-    color: #fff;
-    
-}
-button:hover
-{
-    background-color: #F5EFD9;
-    color:#f48917;   
-}
-
-header h1
-{
-    font-size: 1.5em;
-}
-
-header h2
-{
-    font-size: 1em;
-}
-
-/*inicio de header*/
-header .container-fluid .header1
-{
-    background-color: #741112;
-    padding: 0.3em 0;
-}
-
-.adaptar
-{
-    width: 100%;
-}
-/*navegacion*/
-.navegacion
-{    
-    background-color: transparent;
-    background: transparent;
-    padding: 0 2em;
-}
-.navegacion .navbar-nav li a
-{
-    background-color: transparent;
-    color: #741112;
-    transition: background-color .3s, color.3s;
-    -moz-transition: background-color .3s, color.3s;
-    -webkit-transition: background-color .3s, color.3s;
-    -o-transition: background-color .3s, color.3s;
-    -ms-transition: background-color .3s, color.3s;
-}
-
-.navegacion .container-fluid .navbar-header a
-{
-    padding: 0;
-}
-.navegacion .navbar-nav li a:hover
-{
-    background-color: #FFE;
-    color:#f48917;
-}
-.navegacion .navbar-nav li a i
-{
-    padding-right: 0.3em;
-}
-
-/*fin navegacion*/
-
-
-/* iconos Social */
-.social-icons
-{
-}
-.social-icons i
-{
-    padding: 7px;
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    text-align: center;
-    color: #fff;
-    border: 1px solid transparent;  
-    transition: background-color .5s, color.5s;
-    -moz-transition: background-color .5s, color.5s;
-    -webkit-transition: background-color .5s, color.5s;
-    -o-transition: background-color .5s, color.5s;
-    -ms-transition: background-color .5s, color.5s;
-}
-.social-icons i:hover
-{
-    background-color: #eee;
-    color: #2e2e2e;
-}
-.fa-twitter
-{
-    background: #00abe3;
-}
-.fa-facebook 
-{
-    background: #004088;
-}
-.fa-google-plus 
-{
-    background: #d95333;
-}
-
-/*fin de iconos sociales*/
-
-/*inicio de login*/
-.login
-{
-    margin-top: 0.15em;
-}
-
-.thumbnail p a, .login button
-{
-    color: #fff;
-    background-color: transparent;
-    padding: 0.2em;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
-    transition: background-color .3s, color.3s;
-    -moz-transition: background-color .3s, color.3s;
-    -webkit-transition: background-color .3s, color.3s;
-    -o-transition: background-color .3s, color.3s;
-    -ms-transition: background-color .3s, color.3s;
-}
-
-.login button:hover
-{
-    background-color: #F5EFD9;
-    color:#f48917;
-}
-
-.login i{
-    padding-right: 0.5em;
-}
-/*fin de header*/
-
-
-/*logo*/
-#logo
-{
-    padding: 0.2em 0;
-    border: 2px solid red; 
-}
-/*fin logo*/
-
-
-
-/*buscar*/
-.row .buscar
-{
-    padding: 0 1em 1em 1em;
-}
-/*fin buscar*/
-
-
-
-.fila
-{
-    border: 2px solid red; 
-}
-
-
-
-/*item*/
-
-.row .seccion
-{
-    border-bottom: 3px solid #741112;
-    margin-bottom: 0.5em;
-    color: #741112;
-}
-
-.row .thumbnail .portada
-{
-    height: 300px;
-    width: 200px;
-}
-
-.thumbnail p a
-{
-    background-color: #741112;
-    border-color: #741112;
-    border-radius: 0.8em;
-}
-
-.thumbnail p a:hover
-{
-    background-color: #F5EFD9;
-    border-color: #f48917;
-    color:#f48917;
-}
-/*item*/
-
-
-/*pie de pagina*/
-
-footer
-{
-   margin-top: 2em;
-}
-footer .container-fluid
-{
-    background-color: #741112;
-    color: #DFD8D1;
-    padding: 2em 4em;
-}
-
-footer .container-fluid .titulo-footer
-{
-    border-bottom: 2px solid #f48917;
-    margin-bottom: 0.5em;
-
-}
-/*pie de pagina*/
-
-
-/*formulario login*/
-
-/*formulario login*/
-
-/* categorias */
-
-.container .categoria
-{
-    border: 2px solid #A60606;
-    border-radius: 20px;
-    -webkit-box-shadow: 0px 50px 20px -40px #A60606;
-    -moz-box-shadow: 0px 50px 20px -40px #A60606;    
-    box-shadow: 0px 50px 20px -40px #A60606;
-    padding: 1.5em;
-    margin: 2em 0.1em;
-}
-
-.container .categoria .imagen_portada
-{
-    width: 200px;
-    margin: 0px;
-    position: relative;
-}
-
-.container .categoria .imagen_portada img
-{
-    width: 200px;
-    height: 250px;
-}
-
-.container .categoria .imagen_portada .info
-{
-    border-radius: 0 0 5px 5px;
-    background: rgba(166, 6, 6, 0.4);
-    bottom: 0;
-    color: #eee;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    height: 40px;
-    line-height: 40px;
-    opacity: 0;
-    position: absolute;
-    text-align: center;
-    text-decoration: none;
-    visibility: hidden;
-    width: 100%;
-    left: 0;
-    -webkit-transition: background-color 0.5s;
-    -moz-transition: background-color 0.5s;
-    transition: background-color 0.5s;
-}
-
-.container .categoria .imagen_portada:hover .info
-{
-    opacity: 1;
-    visibility: visible; 
-}
-
-.container .categoria .imagen_portada .info:hover
-{
-    background-color: rgba(166,6,6,0.9);
-}
-
-.container .titulo_categoria
-{
-    color: #A60606;
-}
-.dl-horizontal div
-{
-    border-bottom: 1px solid #A60606;
-    padding-bottom: 0.4em;
-}
-.row .caja
-{
-    padding: 0;
-    margin: 5px;
-}
-/* fin categorias */
-
-
-/* Contactenos */
-.container .row .title-contactenos
-{
-    border-bottom: 3px solid #741112;
-    margin-bottom: 1em;
-}
-/* fin Contactenos */
-
-/* imagen */
-.contenedor-img{
-    background-color: rgba(116,112,107,0.09);
-    overflow: hidden;
-}
-
-.contenedor-img .imagen{
-}
-
-.contenedor-img .imagen img{
-    display: block;
-    margin: 0.5em auto;
-}
-
-.contenedor-img .info{
-    background-color: rgba(119,17,18,0.9);
-    padding: 0.5em;
-    overflow: hidden;
-}
-
-.contenedor-img .info a{
-    float: right;
-    background-color: #F5EFD9;
-    color: #f48917;
-    border: 1px solid #f48917; 
-}
-
-.contenedor-img .info a:hover{
-    background-color: #f48917;
-    color: #F5EFD9;
-    border: 1px solid #F5EFD9; 
-}
-
-.autores{
-    padding-top: 2em;
-}
-/* fin imagen */
-
-.mas_autor
-{
-    margin-top: 1em;
-    margin-bottom: 1em;   
-}
-
-.titulo-portada
-{
-    padding-bottom: 0.5em;
-    margin-left: 15px;
-    margin-bottom: 0;
-}
-
-.imagen-centrar
-{
-    margin-left: auto;
-    margin-right: auto;
-    width: 100px;
-    height: 125px;
-}
-
-.lista-publicaciones
-{
-    background-color: #F5EFD9;
-}
-
-a.lista-publicaciones:hover
-{
-    background-color: #812524;
-    color: #eee !important;
+.profile-image{
+    width: 36px;
 }
