--- a/apps/matricula/templates/home/base_index.html
+++ b/apps/matricula/templates/home/base_index.html
@@ -4,8 +4,9 @@
 
 {% block css %}
     <link rel="stylesheet" href="{% static 'css/materialize.css' %}">
-    <link rel="stylesheet" href="{% static 'css/estilologin.css' %}">
+    <link rel="stylesheet" href="{% static 'css/estilos.css' %}">
     <link href='http://fonts.googleapis.com/css?family=Ubuntu:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 {% endblock css %}
 
 {% block js %}
