--- a/apps/pagos/templates/mantenimientos/descuento/modificar_descuento.html
+++ b/apps/pagos/templates/mantenimientos/descuento/modificar_descuento.html
@@ -4,10 +4,10 @@
     <div class="container panel-container">
         <div class="row">
             <div class="col s5">
-                <a class="waves-effect waves-light btn btn-back" href="{% url 'pagos_app:panel_descuento' %}"><i class="fa fa-chevron-left left"></i>Regresar</a>    
+                <a class="waves-effect waves-light btn btn-back" href="{% url 'pagos_app:panel_descuento' %}"><i class="fa fa-chevron-left left"></i>Regresar</a>  
             </div>
             <div class="col s7">
-                <h5>Crear una nueva aula</h5>    
+                <h5>Modificando: el descuento {{ descuento }}</h5>    
             </div>
         </div>
 
@@ -23,8 +23,8 @@
             <div class="col s12 m6 l6">
                 <div class="card-panel">
                     <div class="row">
-                        <form class="col s12" method="POST">{% csrf_token %}
-
+                        <form class="col s12" action="{% url 'pagos_app:modificar_descuento' descuento.pk %}" method="POST">{% csrf_token %}
+                            
                             <div class="row">
                                 <div class="input-field col s12">
                                     {{ form.tipo_descuento }}
@@ -41,7 +41,7 @@
 
                             <div class="row">
                                 <div class="input-field col s12">
-                                    <button class="btn cyan waves-effect waves-light right" type="submit" name="action">guardar
+                                    <button class="btn cyan waves-effect waves-light right" type="submit" name="action">actualizar
                                         <i class="mdi-content-send right"></i>
                                     </button>
                                 </div>
