--- a/apps/users/templates/users/panel/panel.html
+++ b/apps/users/templates/users/panel/panel.html
@@ -21,7 +21,7 @@
                         </li>
                         <li class="divider"></li>
                         <li><a href="{% url 'pagos_app:panel_descuento' %}">descuentos</a></li>
-                        <li><a href="{% url 'pagos_app:estructurapagos_panel' %}">estructura de pagos</a></li>
+                        <li><a href="{% url 'pagos_app:panel_estructurapagos' %}">estructura de pagos</a></li>
                     </ul>
                 </div>
             </li>
