--- a/apps/matricula/templates/matricula/pre_matricula.html
+++ b/apps/matricula/templates/matricula/pre_matricula.html
@@ -7,7 +7,7 @@
                 <a class="waves-effect waves-light btn btn-back" href="{% url 'asistencia_app:panel_docente' %}"><i class="fa fa-chevron-left left"></i>Regresar</a>    
             </div>
             <div class="col s7">
-                <h5>Crear un nuevo docente</h5>    
+                <h5>Registrar Pre Matricula</h5>    
             </div>
         </div>
 
