se agrego la vista pagos de matricula

--- a/apps/pagos/templates/panel_caja/panel.html
+++ b/apps/pagos/templates/panel_caja/panel.html
@@ -10,7 +10,7 @@
             <li class="bold"><a class="collapsible-header  waves-effect waves-teal">Pagos</a>
                 <div class="collapsible-body">
                     <ul>
-                        <li><a href="{% url 'pagos_app:lista_matricula' %}">matricula</a></li>
+                        <li><a href="{% url 'pagos_app:matricula_pendiente' %}">matricula</a></li>
                         <li class="divider"></li>
                         <li><a href="#">sugsanación</a></li>
                         <li class="divider"></li>
